--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
 body {
     text-align: center;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between; 
+    align-items: stretch;
+    font-family: sans-serif;
+}
+
+.left {
+    background: grey;
+    width: 30%;
+    padding: 1%;
+}
+
+.center {
+    background: lightblue;
+    flex-grow: 1;
+    max-width: 500px;
+    padding: 1%;
+}
+
+.right {
+    background: grey;
+    width: 30%;
+    padding: 1%;
+    box-sizing: border-box;
+}
+
+button {
+    margin-top: 20px;
 }
