Layout & colors improved

--- a/style.css
+++ b/style.css
@@ -1,32 +1,93 @@
 body {
+    height: 600px;
     text-align: center;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between; 
     align-items: stretch;
     font-family: sans-serif;
+    background: black;
+}
+
+.flex-container {
+    display: flex;
+}
+
+header {
+    width: 100%;
+    /* border: solid black 1px; */
+    padding-left: 10%;
+}
+
+.restart-button {
+    background: #A8CD9F;
+    cursor: pointer;
 }
 
 .left {
-    background: grey;
+    background: #496989;
     width: 30%;
     padding: 1%;
+    padding-top: 10%;
+    /* padding-left: 2%; */
 }
 
+@media screen and (min-width: 600px) {
+    .buttons-left, .buttons-right {
+        width: 7em;
+        height: 25%;
+        padding-top: 25%;
+        margin-left: 2em;
+    }
+    
+    .button-w, .button-a, .button-s, .button-d,
+    .button-up, .button-left, .button-down, .button-right {
+        width: 2em;
+        height:2em;
+        border: solid white 1px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+    .button-w, .button-up {
+        margin-left: 30%;
+        /* margin-right: 45%; */
+    }
+    /* .button-a {
+        margin-left: 30%;
+    } */
+    .button-s, .button-down {
+        margin-left: 30%;
+    }
+    .button-d, .button-right {
+        margin-top: -61%;
+        margin-left: 59%;
+    }    
+}
+
+
+/*  */
+/* @media screen and (max-width: 599px) {
+    
+} */
+/*  */
+
 .center {
-    background: lightblue;
+    background: #58A399;
     flex-grow: 1;
     max-width: 500px;
     padding: 1%;
 }
 
 .right {
-    background: grey;
+    background: #496989;
     width: 30%;
     padding: 1%;
-    box-sizing: border-box;
+    padding-top: 7%;
 }
 
 button {
-    margin-top: 20px;
+    margin-top: -800px;
 }
